Remove ObjectNode usage