@@ -46,7 +46,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static io.arlas.server.core.model.CollectionReference.INCLUDE_FIELDS;
 
@@ -148,7 +147,7 @@ public class ElasticCollectionReferenceService extends CollectionReferenceServic
             } catch (ArlasException e) {
                 return false;
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
